--- a/EdsLibrary/EdsLibrary.csproj
+++ b/EdsLibrary/EdsLibrary.csproj
@@ -14,6 +14,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Colorful.Console" Version="1.2.15" />
+    <PackageReference Include="System.Text.Json" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="System.Net.Http" />
   </ItemGroup>
 
